# OpenGLTest

./: CMakeLists.txt  README.md
gl3w/: CMakeLists.txt
main/: CMakeLists.txt
main/include/: vgl.h
main/media/shaders/triangles/: triangles.frag  triangles.vert
main/src/: main.cpp
